# sqlaurum

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  Taskfile.yaml  index.html  mkdocs.yaml  pyproject.toml
.github/.workflows/: tests.yaml
.github/workflows/: docs.yml  release.yaml  tests.yaml
docs/: index.md  installation.md  repository.md  usage.md
examples/: alembic_env.py  fastapi_app.py
installation/: index.html
migrations/: index.html
repository/: index.html
search/: search_index.json
sqlaurum/: __init__.py  manager.py  repository.py  sql_types.py  types.py  uow.py  utils.py
sqlaurum/dialects/: postgres.py  sqlite.py
tests/: conftest.py  test_query_builder.py  test_repository.py
usage/: index.html
