[tool.poetry]
name = "sqlaurum"
version = "0.1.0"
description = "SQLAlchemy session and query wrapper."
readme = "README.md"
authors = [
    "Radzim Kowalow <radzim.kowalow@performance-media.pl>"
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
SQLAlchemy = "^2.0.2"
asyncpg = {version = "^0.27.0", optional = true}
aiosqlite = {version = "^0.18.0", optional = true}
alembic = {version = "^1.9.3", optional = true}

[tool.poetry.extras]
all = ["asyncpg", "aiosqlite", "alembic"]
asyncpg = ["asyncpg"]
aiosqlite = ["aiosqlite"]
alembic = ["alembic"]

[tool.poetry.dev-dependencies]
ipython = "^7.29.0"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
isort = "^5.9.3"
pytest-asyncio = "^0.17.2"
python-semantic-release = "^7.25.0"
bandit = "^1.7.4"
black = "^22.3.0"
tox = "^3.25.0"
fastapi = "^0.90.0"
mypy = "^1.0.0"
greenlet = "^2.0.2"  # only needed for M1
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.1"
mkdocs-autorefs = "^0.4.1"
mkdocs-gen-files = "^0.4.0"
mkdocstrings-python = "^0.8.2"

[tool.pytest.ini_options]
addopts = "--cov=./sqlaurum"
testpaths = [
   "./tests"
]
asyncio_mode = "auto"

[tool.bandit]
skips = ['B101']

[tool.isort]
profile = "black"

[tool.semantic_release]
version_variable = [
    'sqlaurum/_version.py:__version__',
]
version_toml = 'pyproject.toml:tool.poetry.version'
upload_to_repository = false
major_on_zero = true
commit_message = "Bump version: {version}"
tag_commit = false


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"